fix: Updated font-size issues found during QA [PT-184981533]
- Changed scorebot title from px to rems
- Changed audio recording icons to use px size to match height
- Changed upload button to not wrap text so it doesn't overlap the labbook

--- a/packages/labbook/src/components/upload-button.scss
+++ b/packages/labbook/src/components/upload-button.scss
@@ -27,6 +27,7 @@
   .button-text {
     margin: 0px 5px;
     font-size: pxToRem(14);
+    white-space: nowrap;
   }
 }
 
